@@ -1,8 +1,4 @@
 ## Process this file with automake to generate Makefile.in
 
 AUTOMAKE_OPTIONS = dejagnu
-
 SUBDIRS = calc hello
-
-check-recursive:
-	@echo "No check target in examples"
